kubernetes/apps/downloads/transmission/transmission-deploy.yaml
# example from: https://github.com/TobiasDeBruijn/HomelabKubernetes/blob/new/manifests/homelab/transmision.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission
  namespace: downloads
spec:
  serviceName: transmission
  replicas: 1
  selector:
    matchLabels:
      name: transmission
  template:
    metadata:
      labels:
        name: transmission
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
      - name: transmission-volume
        persistentVolumeClaim:
          claimName: transmission-volume-pvc
      - name: downloads-volume
        persistentVolumeClaim:
          claimName: transmission-downloads-pvc
      - name: tmpvol
        emptyDir: {}
      containers:
      - name: transmission
        image: ghcr.io/onedr0p/transmission:3.00@sha256:05ac0f144072e49d3b1d116483d99c74609493793799a0cd605a1115b115373d
        ports:
        - name: webui
          containerPort: 9091
          protocol: TCP
        volumeMounts:
        - name: transmission-volume
          mountPath: /config
        - name: downloads-volume
          mountPath: /media/downloads/torrents
        - name: tmpvol
          mountPath: /tmp # fix issue "Unable to create session lock file (30)" when using ReadOnly FileSystem
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: downloads
spec:
  ports:
  - name: webui
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    name: transmission
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: transmission-ingress
  namespace: downloads
spec:
  ingressClassName: nginx-external
  rules:
  - host: media.${DOMAIN_NAME}
    http:
      paths:
      - path: /transmission
        pathType: Prefix
        backend:
          service:
            name: transmission
            port:
              name: webui
